<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="Typos">
    <string name="app_name">Klub Młodych Liderów</string>
    <string name="app_description">Aplikacja stworzona dla wolontariuszy z Fundacji Klubu Młodych Liderów by ułatwić im wpisywanie godzin pracy
        oraz udostępnić ich aktualne postępy,dodatkowo zawiera wyszukiwarke zabaw dla animatorów</string>
    <string name="profile_description">Pokazuje ci twoje dane oraz pozwala ustawić sobie zdjęcie profilowe. Kluczyk służy do zmiany hasła</string>
    <string name="timer_description"> Stoper odlicza czas pracy, następnie po jej zakończeniu wysyła wynik do bazy danych. Może działać w tle ale może zostać
    wyłączony przez system, w takim wypadku zapisuje postęp. Istnieje też opcja (w prawym górnym rogu) dodania sobie czasu pracy bez konieczności odliczania czasu!</string>
    <string name="games_search_engine_description">Wyszukuje animacje według wybranych kryteriów. Baza zawiera 144 animacje. Kolory oznaczają kategorie :D
        \n Pomysłodawca wyszukiwarki:\n Gabi Łanocha</string>
    <string name="works_history_description">Pokazuje twoje ostatnio wykonane zadania oraz spotkania na których byłeś.</string>
    <string name="no_results_found">Nic nie znaleziono :(</string>
    <string name="choose_one_at_least">Musisz wybrać przynajmniej jedną osobe!</string>
    <string name="external_database_unavailable">Brak połączenia z bazą danych! Spróbuj ponownie później</string>
    <string name="wrong_form_info">Nieprawidłowy login, hasło lub brak połaczenia z intenetem!</string>
    <string name="no_empty_fields">Żadne z pól nie może być puste.</string>
    <string name="some_pools_are_empty">Niektóre pola pozostały puste</string>
    <string name="too_many_chars">Hasło nie może mieć wiecej niż 64 znaki.</string>
    <string name="empty_fields_and_too_many_minutes">Zostały puste pola lub minut jest zbyt wiele</string>
    <string name="something_wrong">Coś poszło nie tak!</string>
    <string name="load_previous_data">Brak połączenia z internetem! wczytano ostatnie dane</string>
    <string name="adding_work_confirmation">Dodano pomyślnie!</string>
    <string name="adding_work_error">Nie udało się dodać, sprawdź połączenie z internetem.</string>
    <string name="change_pass_error">Nie udało się zmienić, sprawdź połączenie z internetem.</string>
    <string name="no_minute_counted">Nie odliczono ani jednej minuty czasu!</string>
    <string name="too_many_minutes">nie można wpisać więcej niż 60 minut</string>
    <string name="cancel">anuluj</string>
    <string name="reset">resetuj</string>
    <string name="reset_confirmation">Napewno chcesz zresetować czas?\nTo bezpowrotnie usunie aktualny czas</string>
    <string name="warning">Uwaga!</string>

    <string-array name="number_of_kids_options">
        <item>Wszystkie przedziały</item>
        <item>2-5</item>
        <item>5-15</item>
        <item>15-30</item>
        <item>30+</item>
    </string-array>

    <string-array name="kids_age_options">
        <item>Wszystkie przedziały</item>
        <item>3-6</item>
        <item>7-11</item>
        <item>12+</item>
    </string-array>

    <string-array name="place_options">
        <item>Każde</item>
        <item>plener</item>
        <item>duża zamknięta przestrzeń</item>
        <item>mała zamknięta przestrzeń</item>
    </string-array>

    <string-array name="type_of_games_options">
        <item>Wszystkie</item>
        <item>rozwijająca</item>
        <item>pobudzająca</item>
        <item>w kole</item>
        <item>uspokająjąca</item>
        <item>integracyjna</item>
        <item>drużynowa</item>
    </string-array>

    <string-array name="category_options">
        <item>Wszystkie</item>
        <item>Zabawy</item>
        <item>Drużynowe</item>
        <item>Lina</item>
        <item>Chusta</item>
        <item>Tańce</item>
    </string-array>

    <string-array name="work_types">
        <item>Wszystkie</item>
        <item>Brak</item>
        <item>Spotkania ogólne</item>
        <item>Spotkania sekcji</item>
        <item>Szkolenia</item>
        <item>Integracje</item>
        <item>Spotkania do wydarzeń</item>
        <item>Wydarzenia</item>
    </string-array>

    <string-array name="work_types_to_choose">
        <item>Brak</item>
        <item>Spotkania ogólne</item>
        <item>Spotkania sekcji</item>
        <item>Szkolenia</item>
        <item>Integracje</item>
        <item>Spotkania do wydarzeń</item>
        <item>Wydarzenia</item>
    </string-array>

    <string name="open_drawer">Open Navigation Drawer</string>
    <string name="close_drawer">Close Navigation Drawer</string>
    <string name="kml_email">kmlmielec@gmail.com</string>
    <string name="select_all">zaznacz wszystkich</string>
    <string name="deselect_all">odznacz wszystkich</string>
    <string name="search_by_name">Szukaj po imieniu</string>
    <string name="log_in">Zaloguj się</string>
    <string name="login">Login</string>
    <string name="password">Hasło</string>
    <string name="remember_me">Zapamietaj mnie</string>
    <string name="next">Dalej</string>
    <string name="name">Nazwa</string>
    <string name="description">Opis</string>
    <string name="requirements">Czego potrzebujesz?</string>
    <string name="category">Kategoria</string>
    <string name="type_of_game">Rodzaj</string>
    <string name="place">Miejsce</string>
    <string name="number_of_kids">Liczba Dzieci</string>
    <string name="kids_age">Wiek Dzieci</string>
    <string name="chosen_volunteers">Wybrani wolontariusze:</string>
    <string name="operation_name">Nazwa działania:</string>
    <string name="write_time">Wpisz czas:</string>
    <string name="hours">godzin</string>
    <string name="minutes">minut</string>
    <string name="send">wyślij</string>
    <string name="add">Dodaj</string>
    <string name="legend_of_colour">Legenda colorów</string>
    <string name="games">Zabawy</string>
    <string name="team">Drużynowe</string>
    <string name="rope">Lina</string>
    <string name="scarf">Chusta</string>
    <string name="dances">Tańce</string>
    <string name="about_app_title">O aplikacji</string>
    <string name="profile">Profil</string>
    <string name="work_timer">Licznik Pracy</string>
    <string name="games_search_engine">Wyszukiwarka Animacji</string>
    <string name="general_journal">Dziennik Ogólny</string>
    <string name="personal_journal">Dzienik Indywidualny</string>
    <string name="creator_with_label">Wykonawca: Arek Mądry</string>
    <string name="change_password">Zmień hasło</string>
    <string name="type_old_password">Podaj stare hasło:</string>
    <string name="type_new_password">Podaj nowe hasło:</string>
    <string name="add_work">Dodaj zadanie</string>
    <string name="new_work_name">Nazwa nowego zadania:</string>
    <string name="what_were_you_doing">Co robiłeś/aś</string>
    <string name="new_work_description">Opis:</string>
    <string name="work_purpose">Cel zadania / Tytuł</string>
    <string name="work_description_examples">Co robiłeś? / Na jakie wydarzenie? / Z kim? itp.</string>
    <string name="end_your_work">Zakończ zadanie</string>
    <string name="new_work_time">Czas wykonywania:</string>
    <string name="progress_founded">Znaleziono postęp!</string>
    <string name="restore_progress_question">Przywrócić zapisany postęp?</string>
    <string name="restore">Przywróć</string>
    <string name="do_not_restore">nie\nprzywracaj</string>
    <string name="work_name">Nazwa Zadania:</string>
    <string name="work_description">Opis:</string>
    <string name="date">Data wpisania:</string>
    <string name="work_time">Czas wykonania:</string>
    <string name="add_to_chosen">dodaj godziny wolontariuszom</string>
    <string name="game_name">Nazwa Zabawy</string>
    <string name="optional">(Opcjonalna)</string>
    <string name="search">szukaj</string>
    <string name="join_year">Rok dołączenia:</string>
    <string name="work_time_title">Czas pracy:</string>
    <string name="in_this_season">W tym sezonie:</string>
    <string name="in_this_month">W tym miesiącu:</string>
    <string name="sections">Sekcje:</string>
    <string name="add_your_first_work">Dodaj swoje piewsze zadanie!</string>
    <string name="no_results">Brak wyników :O</string>
    <string name="change_mode">Tryb ciemny</string>
    <string name="about_colors">O kolorach</string>
    <string name="control_panel">Panel Sterowania</string>
    <string name="creation_date">Data wykonania:</string>
    <string name="confirm">Potwierdź</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="overall_log">Dziennik Ogólny</string>
    <string name="individual_log">Dziennik Indywidualny</string>
    <string name="finish_writing">Dokończ wpisywanie:</string>
    <string name="operation_desc">Opis działania:</string>
    <string name="name_title_type">Nazwa, tytuł, typ</string>
    <string name="expand_what_was_happen">Rozwiń co się działo :D</string>
    <string name="volunteers_are_not_chosen">Żadni wolontariusze nie zostali wybrani</string>
    <string name="too_many_hours">Liczba godzin nie może być większa od 14</string>
    <string name="works_history">Historia Zadań</string>
    <string name="dialog_history_volunteers">Osoby:</string>
    <string name="your_last_meetings">Twoje ostatnie spotkania:</string>
    <string name="your_last_works">Twoje ostatnie zadania:</string>
    <string name="all_last_works">Wszystkie zadania</string>
    <string name="all_last_meetings">Wszystkie spotkania</string>
    <string name="executor_of_work">Wykonujący zadanie:</string>
    <string name="show_all_meetings_history">Pokaż całą historię spotkań</string>
    <string name="show_all_works_history">Pokaż całą historię zadań</string>
    <string name="volunteers_browser">Przeglądarka wolontariuszy</string>
    <string name="volunteer_full_name">%s %s</string>
    <string name="type_title">Typ:</string>
    <string name="fullname_title">Imię i nazwisko:</string>
    <string name="work_history">Historia Zadań</string>
    <string name="search_by_title">Wyszukaj po tytule</string>
    <string name="nic_nie_znaleziono">Nic nie znaleziono</string>
    <string name="all_volunteers_was_selected">Wszyscy wolontariusze zostali już wybrani!</string>
    <string name="log_out">Wyloguj</string>
    <string name="dark_mode">Tryb ciemny</string>
    <string name="work_adding">Dodawanie Godzin</string>
    <string name="no_results_c">Brak wyników… \nSpróbuj wybrać inny miesiąc :D</string>
    <string name="no_results_type">Brak wyników… \nSpróbuj wybrać inny typ :D</string>
    <string name="meetings">Spotkania</string>
    <string name="works">Zadania</string>
    <string name="work_type">Typ Działania</string>
    <string name="work_type_two_dots">Typ działania:</string>
    <string name="no_type">Brak</string>
    <string name="total_work_count">Liczba wyników:</string>
    <string name="total_work_time">Suma godzin:</string>
    <string name="e_mail">e-mail</string>
    <string name="pass_has_been_changed">Sukces! Przy następnym otwarciu pojawi się ekran logowania</string>

</resources>