<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/legenda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/legend_of_colour"
        android:textColor="@color/textColorLight"
        android:textSize="30sp" />

    <View
        android:id="@+id/zabawy"
        style="@style/dialog_about_colors_pools"
        android:layout_below="@+id/legenda"
        android:background="@color/gamesColor"/>

    <TextView
        style="@style/dialog_about_colors_text_views"
        android:layout_alignBottom="@+id/zabawy"
        android:layout_toRightOf="@+id/zabawy"
        android:text="@string/games"/>

    <View
        android:id="@+id/zabawy1"
        style="@style/dialog_about_colors_pools"
        android:layout_below="@+id/zabawy"
        android:background="@color/teamsColor"/>

    <TextView
        style="@style/dialog_about_colors_text_views"
        android:layout_alignBottom="@+id/zabawy1"
        android:layout_toRightOf="@+id/zabawy1"
        android:text="@string/team"/>

    <View
        android:id="@+id/zabawy2"
        style="@style/dialog_about_colors_pools"
        android:layout_below="@+id/zabawy1"
        android:background="@color/RopeColor"/>

    <TextView
        style="@style/dialog_about_colors_text_views"
        android:layout_alignBottom="@+id/zabawy2"
        android:layout_toRightOf="@+id/zabawy2"
        android:text="@string/rope"/>

    <View
        android:id="@+id/zabawy3"
        style="@style/dialog_about_colors_pools"
        android:layout_below="@+id/zabawy2"
        android:background="@color/scarfColor"/>

    <TextView
        style="@style/dialog_about_colors_text_views"
        android:layout_alignBottom="@+id/zabawy3"
        android:layout_toRightOf="@+id/zabawy3"
        android:text="@string/scarf"/>

    <View
        android:id="@+id/zabawy4"
        style="@style/dialog_about_colors_pools"
        android:layout_below="@+id/zabawy3"
        android:background="@color/danceColor"/>

    <TextView
        style="@style/dialog_about_colors_text_views"
        android:layout_alignBottom="@+id/zabawy4"
        android:layout_toRightOf="@+id/zabawy4"
        android:text="@string/dances"/>


</RelativeLayout>