<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                style="@style/dialog_about_app_titles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="25sp"
                android:text="@string/add_work" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_work_name"
                    android:textColor="@color/textColorLight" />

                <EditText
                    android:id="@+id/work_name"
                    style="@style/app_edit_texts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/work_purpose" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/new_work_description"
                    android:textColor="@color/textColorLight" />

                <EditText
                    android:id="@+id/work_description"
                    style="@style/app_edit_texts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/work_description_examples" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/creation_date"
                    android:textColor="@color/textColorLight" />

                <TextView
                    android:id="@+id/work_creation_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:focusable="true"
                    android:text="20-12-2022"
                    android:textColor="@color/textColorLight"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/new_work_time"
                    android:textColor="@color/textColorLight" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/hours"
                    style="@style/app_edit_texts"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:inputType="number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_toRightOf="@+id/hours"
                    android:text="@string/hours"
                    android:textColor="@color/textColorLight"
                    android:textSize="17sp" />

                <EditText
                    android:id="@+id/minutes"
                    style="@style/app_edit_texts"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/text_view_minutes_dialog"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/text_view_minutes_dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/minutes"
                    android:textColor="@color/textColorLight"
                    android:textSize="17sp" />

            </RelativeLayout>
                <ProgressBar
                    android:id="@+id/works_progress_bar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="-25dp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/dialog_timer_add_instant"
                    style="@style/buttons"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:paddingHorizontal="10dp"
                    android:text="@string/add"
                    android:textColor="@android:color/holo_green_light" />
        </LinearLayout>
    </ScrollView>
</layout>