<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.SelectVolunteersActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/control_panel_recycle_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp"
        android:scrollbars="vertical"
        tools:listitem="@layout/row_user" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/control_panel_floating_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        app:srcCompat="@drawable/ic_arrow_forward"
        android:contentDescription="@string/next" />

    <TextView
        android:id="@+id/control_panel_select_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/control_panel_search_by_first_name"
        android:layout_marginLeft="10dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="75dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/select_all"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/control_panel_deselect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="75dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/deselect_all"
        android:textColor="@android:color/holo_red_dark" />

    <EditText
        android:id="@+id/control_panel_search_by_first_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/search_by_name"
        android:layout_gravity="bottom"
        android:maxLines="1"
        android:textColor="@color/BlackContent"
        android:textSize="20sp" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>