<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/dialog_bg"
    android:gravity="center">

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/form_text_views"
        android:textColor="@android:color/secondary_text_light"
        android:text="@string/work_name"/>

    <TextView
        android:id="@+id/dialog_history_work_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:text="Nazwa"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/form_text_views"
        android:textColor="@android:color/secondary_text_light"
        android:text="@string/work_description"/>

    <TextView
        android:id="@+id/dialog_history_work_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/BlackContent"
        android:textSize="18sp"
        android:gravity="center"
        android:text="WorkDescription"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/form_text_views"
        android:textColor="@android:color/secondary_text_light"
        android:text="@string/date"/>

    <TextView
        android:id="@+id/dialog_history_work_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/BlackContent"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="18sp"
        android:text="Date"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/form_text_views"
        android:textColor="@android:color/secondary_text_light"
        android:text="@string/work_time"/>

    <TextView
        android:id="@+id/dialog_history_execution_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/BlackContent"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="18sp"
        android:text="ExecutionTime"/>
</LinearLayout>
</ScrollView>