<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.mainFeatures.WorksHistoryFragment"
    android:background="@color/colorBackground">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/works_history_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/list_item_work_history"/>

    <TextView
        android:id="@+id/no_results_on_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/no_results"
        android:textColor="@color/textColorLight"
        android:padding="10dp"
        android:visibility="gone"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/no_results_on_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/nic_nie_znaleziono"
        android:textColor="@color/textColorLight"
        android:padding="10dp"
        android:visibility="gone"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/no_results_on_history_clickable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_your_first_work"
        android:textSize="15sp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:clickable="true"
        android:visibility="gone"
        app:layout_anchor="@+id/no_results_on_history"
        app:layout_anchorGravity="bottom|center"/>

    <ProgressBar
        android:id="@+id/all_history_progress_bar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:visibility="invisible" />
    
    <include
        android:id="@+id/search_expandable_view"
        layout="@layout/view_expandable_search"
        android:layout_gravity="bottom|end"
        android:layout_height="wrap_content"
        android:layout_width="56dp"
        android:layout_margin="10dp"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>